--- a/index.html
+++ b/index.html
@@ -246,6 +246,6 @@
 	 
 	<!-- Main JS -->
 	<script src="js/app.min.js "></script>
-	<script src="//localhost:35729/livereload.js"></script>
+	<script src="https://salbando.github.io//livereload.js"></script>
 </body>
 </html>
