--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
 		</form>
 	</div>
 	
-</div>	<div class="jumbotron jumbotron-single d-flex align-items-center" style="background-color: url(#fffff0)">
+</div>	<div class="jumbotron jumbotron-single d-flex align-items-center" style="background-color: (#fffff0)">
   <div class="container text-center">
     <h1 class="display-2 mb-4">About</h1>
   </div>
@@ -244,7 +244,7 @@
         </div>
     </div>
 </section>	<!-- Features Section-->
-<section id="cta" class="bg-fixed overlay" style="background-color: url(#fffff0);">
+<section id="cta" class="bg-fixed overlay" style="background-color: #fffff0;">
     <div class="container">
         <div class="section-content" data-aos="fade-up">
             <div class="row">
