--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- External CSS -->
-    <link rel="stylesheet" href="https://salbando.github.io/vendor/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="https://salbando.github.io/vendor/select2/select2.min.css">
-    <link rel="stylesheet" href="https://salbando.github.io/vendor/owlcarousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://salbando.github.io/vendor/lightcase/lightcase.css">
+    <link rel="stylesheet" href="https://salsbooks.com/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="https://salsbooks.com/vendor/select2/select2.min.css">
+    <link rel="stylesheet" href="https://salsbooks.com/vendor/owlcarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://salsbooks.com/vendor/lightcase/lightcase.css">
      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Work+Sans:300,400,700" rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://salbando.github.io/css/style.min.css">
+    <link rel="stylesheet" href="https://salsbooks.com/css/style.min.css">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -65,8 +65,10 @@
                 <div class="col-md-12">
                     <div class="row align-items-center">
 
-                        <div class="col-md-4 offset-md-2 col-sm-6" data-aos="flip-left">
+                        <div class="col-md-4 offset-md-2 col-sm-6" data-aos="flip-left">   
+                            <center>
                             <a href="https://www.amazon.com/dp/1956806849" target="_blank"><img class="my-5" src="img/throughthedogs.png" alt=""></a>
+                             </center>
                         </div><!--/ .col-md-4.col-md-offset-right-2.col-sm-6 -->
 
                         <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="fade-left">
