--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" content="IE=edge">
     <title>Sal's Books</title>
     <meta name="description" content="Sal's Books">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
