--- a/index.html
+++ b/index.html
@@ -198,22 +198,16 @@
                                 <div class="bg-white p-5 shadow">
                                     <div class="heading-section text-center">
                                         <h2 class="mb-4 brand-sal-span">
-                                            Contact Us
+                                            Contact The Author
                                         </h2>
                                     </div>
-                                    <form method="post" name="contact-us" action="">
+                                    <form method="post" name="contact-us" enctype="multipart/form-data" action="mailto:sal.bando1961@gmail.com">
                                         <div class="row">
                                             <div class="col-md-12 form-group">
                                                 <input type="text" class="form-control" id="name" name="name" placeholder="Name">
                                             </div>
                                             <div class="col-md-12 form-group">
                                                 <input type="text" class="form-control" id="email" name="email" placeholder="Email">
-                                            </div>
-                                            <div class="col-md-12 form-group">
-                                                <input type="number" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="Phone">
-                                            </div>
-                                            <div class="col-md-12 form-group">
-                                                <input type="text" class="form-control" id="websiteUrl" name="websiteUrl" placeholder="Website">
                                             </div>
                                             <div class="col-md-12 form-group">
                                                 <textarea class="form-control" id="message" name="message" rows="6" placeholder="Your Message ..."></textarea>
