--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                     <a class="nav-link" href="#About">About</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="https://www.amazon.com/dp/1956806849" target="_blank">Get a Copy</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#Reviews">Reviews</a>
                 </li>
                 <li class="nav-item">
