--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QC05W42VRT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QC05W42VRT');
+</script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" content="IE=edge">
     <title>Sal's Books</title>
