--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
                                             Contact The Author
                                         </h2>
                                     </div>
-                                    <form method="post" name="contact-us" enctype="multipart/form-data" action="mailto:sal.bando1961@gmail.com">
+                                    <form action="https://api.web3forms.com/submit" method="POST">
+                                        <input type="hidden" name="access_key" value="abf2b9a7-49c0-49ff-a45a-dacb299c2faa">
                                         <div class="row">
                                             <div class="col-md-12 form-group">
                                                 <input type="text" class="form-control" id="name" name="name" placeholder="Name">
@@ -229,6 +230,7 @@
                                             </div>
                                         </div>
                                     </form>
+                                    <script src="https://web3forms.com/client/script.js" async defer></script>
                                 </div>
 
                     </div><!--/ .featurettes-item -->
