--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="fade-left">
                             <center><span class="brand-span">A feel-good love story about a boy and an exceptional dog destined to join him on his journey to manhood.</span>
                             <br><br>
-                            <h2 class="top-banner__h2">THROUGH THE DOG'S EYES</h2><br><span class="brand-span">“MUST READ FOR DOG PEOPLE!” - PAT</span></center>
+                            <h2 class="top-banner__h2">THROUGH THE DOG'S EYES</h2><br><span class="brand-span">“Must read for dog people!” - Pat Black</span></center>
                             <br><br>
                             <div class="col-md-12 text-center">
                                 <a href="https://www.amazon.com/dp/1956806849" target="_blank"><button class="btn btn-primary btn-shadow btn-lg" type="submit" name="submit">Buy Now</button></a>
