--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="fade-left">
                             <center><span class="brand-span">A feel-good love story about a boy and an exceptional dog destined to join him on his journey to manhood.</span>
                             <br><br>
-                            <h2 class="top-banner__h2">THROUGH THE DOG'S EYES</h2><br><span class="brand-span">“Must read for dog people!” - Pat Black</span></center>
+                            <h2 class="top-banner__h2">THROUGH THE DOG'S EYES</h2><br><span class="brand-span">“A Page-turner with a Charming Point of View” - Mark</span></center>
                             <br><br>
                             <div class="col-md-12 text-center">
                                 <a href="https://www.amazon.com/dp/1956806849" target="_blank"><button class="btn btn-primary btn-shadow btn-lg" type="submit" name="submit">Buy Now</button></a>
@@ -154,10 +154,10 @@
                         <!-- Features Item -->
                         <div class="col-md-4 col-sm-12 text-center mt-4">
                             <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
-                                <h3><div class="nourd">Touching tribute of a boys best friend</div></h3>
+                                <h3><div class="nourd">A Page-turner with a Charming Point of View</div></h3>
                                 <br>
-                                <p>This book was one of the best books I have read. It was funny, sad at times but real down to earth feelings and love between a boy and his dog. I loved all the Massachusetts references in the book as I was reading. It was a great story and one that kept me wanting to read. Definitely a family and community of love. 
-                                <br>- Kim Bauer</p>
+                                <p>From the beginning, Sanfilippo ensconces us in the mind of Bull, a 120-pound Newfie mix, whose love for his family, his neighbors and anything edible that lands on the floor is unconditional. Most of all though, he loves Jake, his special boy, and it is Jake's life we watch unfold through Bull's gentle and protective eyes. This story will have you smiling, crying and smiling again through your tears.
+                                <br>- Mark</p>
                             </div>
 
                         </div>
@@ -168,17 +168,17 @@
                                 <h3><div class="nourd">An ideal book for dog lovers, heartfelt and emotional</div></h3>
                                 <br>
                                 <p>I really enjoyed this book. It has its exhilarating moments but it also brought me to tears several times in a very good, emotional way. Sanfilippo's writing is clean and skillful. Writing from the dog’s point of view is engaging and kept me turning the pages. This book is much more than a story about a dog. It's also about the boy's (Jake) coming-of-age story and a love story. This truly is a memorable feel-good novel that stays with you. If you have a dog or any pet that you love or have loved in the past, you will definitely find delight in reading this book.
-                                <br>- Terry Weed</p>
+                                <br>- Terry</p>
                             </div>
                         </div>
                         <!-- End of Feature Item -->
                         <!-- Features Item -->
                         <div class="col-md-4 col-sm-12 text-center mt-4">
                             <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
-                                <h3><div class="nourd">A Great Story</div></h3>
+                                <h3><div class="nourd">I loved this book, more dogs should learn to write.</div></h3>
                                 <br>
-                                <p>I enjoyed reading this book. It is a heartwarming story emphasizing the importance of the love and support shared by a family and friends, as seen through the eyes of their beloved dog.
-                                <br>- Patricia McKinney</p>
+                                <p>A heartwarming story of friendship, family and the unconditional love between a (my) boy and his dog, Bull.This book brought back so many memories of days gone by, the joy of growing up surrounded by family, friends, caring neighbors, and of course the one constant, my dog. Thank you Jake, Bull, and Sal, for sharing your story. Wonderful first book.
+                                <br>- Kevin</p>
                             </div>
                         </div>
                         <!-- End of Feature Item -->
