--- a/index-old.html
+++ b/index-old.html
@@ -29,7 +29,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="css/simple-updates.css">
+    <link rel="stylesheet" href="css/modern-author.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -42,7 +42,7 @@
     <nav id="header-navbar" class="navbar navbar-expand-lg py-4">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="/">
-                <h3 class="font-weight-bolder mb-0">SAL'S BOOKS</h3>
+                <h3 class="font-weight-bolder mb-0">Sal Sanfilippo</h3>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header" aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="lnr lnr-menu"></span>
@@ -69,40 +69,46 @@
     <div id="Books" class="jumbotron d-flex align-items-center">
         <div class="container">
             <div class="section-content">
-                <div class="row justify-content-center">
-                    <!-- They Never Stop Loving You -->
-                    <div class="col-lg-6 col-md-12 mb-4" data-aos="fade-up" data-aos-delay="100">
-                        <div class="book-card">
-                            <div class="book-image-container text-center" style="position: relative;">
-                                <span class="new-book-badge">NEW</span>
-                                <a href="https://www.amazon.com/dp/B0F9MLC1CP" target="_blank">
-                                    <img src="img/theyneverstop.jpg" alt="They Never Stop Loving You" class="img-fluid">
-                                </a>
-                            </div>
-                            <div class="text-center">
-                                <h3 class="top-banner__h2">THEY NEVER STOP LOVING YOU</h3>
-                                <p class="brand-span">Can one conversation change your life? Open to page one and find out for yourself.</p>
-                                <p class="brand-span mb-4"><em>"Tell me a story." That's how our tale begins.</em></p>
-                                <a href="https://www.amazon.com/dp/B0F9MLC1CP" target="_blank" class="btn btn-primary btn-shadow btn-lg">Buy Now on Amazon</a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row align-items-center">
 
-                    <!-- Through the Dog's Eyes -->
-                    <div class="col-lg-6 col-md-12 mb-4" data-aos="fade-up">
-                        <div class="book-card">
-                            <div class="book-image-container text-center">
-                                <a href="https://www.amazon.com/dp/1956806849" target="_blank">
-                                    <img src="img/throughthedogs.png" alt="Through the Dog's Eyes" class="img-fluid">
-                                </a>
+                            <div class="col-md-4 offset-md-2 col-sm-6" data-aos="flip-left">   
+                                <center>
+                                <a href="https://www.amazon.com/dp/1956806849" target="_blank"><img class="my-5" src="img/throughthedogs.png" alt="Through The Dog's Eyes"></a>
+                                 </center>
                             </div>
-                            <div class="text-center">
-                                <h3 class="top-banner__h2">THROUGH THE DOG'S EYES</h3>
-                                <p class="brand-span">A feel-good love story about a boy and an exceptional dog destined to join him on his journey to manhood.</p>
-                                <p class="brand-span mb-4"><em>"A Page-turner with a Charming Point of View" - Mark</em></p>
-                                <a href="https://www.amazon.com/dp/1956806849" target="_blank" class="btn btn-primary btn-shadow btn-lg">Buy Now on Amazon</a>
+
+                            <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="fade-left">
+                                <center><span class="brand-span">A feel-good love story about a boy and an exceptional dog destined to join him on his journey to manhood.</span>
+                                <br><br>
+                                <h2 class="top-banner__h2">THROUGH THE DOG'S EYES</h2><br><span class="brand-span">“A Page-turner with a Charming Point of View” - Mark</span></center>
+                                <br><br>
+                                <div class="col-md-12 text-center">
+                                    <a href="https://www.amazon.com/dp/1956806849" target="_blank"><button class="btn btn-primary btn-shadow btn-lg" type="submit" name="submit">Buy Now</button></a>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="row align-items-center mt-5">
+                             <div class="col-md-4 offset-md-2 col-sm-6" data-aos="flip-left">   
+                                <center>
+                                <a href="https://www.amazon.com/dp/B0F9MLC1CP" target="_blank"><img class="my-5" src="img/theyneverstop.jpg" alt="They Never Stop Loving You" style="max-width: 80%; height: auto;"></a>
+                                 </center>
+                            </div>
+
+                            <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="fade-left">
+                                <center><span class="brand-span">Can one conversation change your life? Open to page one and find out for yourself.</span>
+                                <br><br>
+                                <h2 class="top-banner__h2">THEY NEVER STOP LOVING YOU</h2><br><span class="brand-span">“Tell me a story.” That's how our tale begins.</span></center>
+                                <br><br>
+                                <div class="col-md-12 text-center">
+                                    <a href="https://www.amazon.com/dp/B0F9MLC1CP" target="_blank"><button class="btn btn-primary btn-shadow btn-lg" type="submit" name="submit">Buy Now</button></a>
+                                </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -114,15 +120,16 @@
             <div class="section-content">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="row align-items-center">
-                            <div class="col-lg-7 col-md-12 mb-4 mb-lg-0" data-aos="fade-right">
+                        <div class="row align-items-center text-white">
+
+                            <div class="col-md-4 offset-md-2 col-sm-6" data-aos="fade-right">
                                 <h4 class="mb-4"><span class="brand-sal-span">Sal Sanfilippo</span></h4>
-                                <span class="brand-sal-span">
+                                 <span class="brand-sal-span">
                                     <p>Sal Sanfilippo was born and raised in Boston. He received a BA in English from UMass Boston and an MBA from Suffolk University—later, as an airline executive, he lived in Italy, Australia, and California. But the dream to write and share stories about the nobility and frailty of the human condition was never far from his heart.</p>
 
                                     <p>With "Through the Dog's Eyes," his first novel, published in 2022, he touched readers around the world, offering insight into the unique bond between humans and the precious dogs that choose us as their own.</p>
 
-                                    <p>In March of 2023, the book was featured on "NightSide with Dan Rae," a nationally syndicated radio program heard across the United States. <a href="https://www.spreaker.com/episode/through-the-dog-s-eyes-10-p-m--53355674" target="_blank">Listen to the podcast here</a>.</p>
+                                    <p>In March of 2023, the book was featured on "NightSide with Dan Rae," a nationally syndicated radio program heard across the United States. <a href="https://www.iheart.com/podcast/1002-nightside-with-dan-28654279/episode/through-the-dogs-eyes-10-pm-111618519/" target="_blank">Listen to the podcast here</a>.</p>
 
                                     <p>In Sal's second novel, "They Never Stop Loving You," Sal continues to explore the value to be found in a simple life well lived and the impact we all have on those we touch on our journey through this sometimes challenging and confusing world.</p>
                                     
@@ -134,9 +141,10 @@
                                 </span>
                             </div>
 
-                            <div class="col-lg-5 col-md-12 text-center text-lg-right" data-aos="flip-right">
-                                <img class="my-5 author-photo" src="img/dad1.webp" alt="Sal Sanfilippo - Author">
+                            <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="flip-right">
+                                <img class="my-5" src="img/sal1.png" alt="Sal Sanfilippo - Author">
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -243,12 +251,8 @@
         </div>
     </footer>
 
-    <!-- Particles container -->
-    <div id="particles-js" style="position: fixed; width: 100%; height: 100%; top: 0; left: 0; z-index: -1;"></div>
-
     <!-- Scripts -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="vendor/bootstrap/popper.min.js"></script>
     <script src="vendor/bootstrap/bootstrap.min.js"></script>
     <script src="vendor/select2/select2.min.js "></script>
@@ -268,25 +272,6 @@
             duration: 800,
             easing: 'ease-in-out',
             once: true
-        });
-        
-        // Initialize particles
-        particlesJS('particles-js', {
-            particles: {
-                number: { value: 50, density: { enable: true, value_area: 800 } },
-                color: { value: "#ff9900" },
-                shape: { type: "circle" },
-                opacity: { value: 0.3, random: true },
-                size: { value: 3, random: true },
-                line_linked: { enable: false },
-                move: { enable: true, speed: 1, direction: "none", random: true, out_mode: "out" }
-            },
-            interactivity: {
-                detect_on: "canvas",
-                events: { onhover: { enable: true, mode: "repulse" }, resize: true },
-                modes: { repulse: { distance: 100, duration: 0.4 } }
-            },
-            retina_detect: true
         });
     </script>
 </body>
